# frc-ledvision

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp
.cache/clangd/index/: main.cpp.43D18A47650BD88B.idx
docker/: Dockerfile  Dockerfile_dev  build_container.sh  build_prod_container.sh  make_dev_image.sh  make_image.sh  make_prod_image.sh
include/: Camera.h  Camera.hpp  Networking.h  Networking.hpp  PeripheryClient.h  PeripheryClient.hpp  PeripherySession.h  PeripherySession.hpp  common.hpp  networking.h  yolo11.hpp
src/: Camera.cpp  Networking.cpp  PeripheryClient.cpp  PeripherySession.cpp  main.cpp  networking.cpp  yolo11.cpp
